# chat-lf

./: LICENSE  README.md
chat-service/: .env.example  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
chat-service/alembic/: env.py
chat-service/alembic/versions/: 0001_initial.py
chat-service/app/: config.py  database.py  dependencies.py  main.py
chat-service/app/models/: conversation.py  message.py
chat-service/app/repositories/: conversation_repository.py  message_repository.py
chat-service/app/routers/: chat_messages.py  conversations.py
chat-service/app/services/: chat_service.py  llm_service.py
chat-service/tests/: conftest.py  test_conversations.py  test_messages.py
chat-ui/: .env.example  .oxfmtrc.json  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
chat-ui/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
chat-ui/src/app/api/backend/[...path]/: route.ts
chat-ui/src/components/: ChatComposer.tsx  ConversationSidebar.tsx  MessageInput.tsx  MessageThread.tsx
chat-ui/src/components/ui/: scroll-area.tsx
chat-ui/src/lib/: useChatStream.ts
