[tool.poetry]
name = "chat-service"
version = "0.1.0"
description = "AI Chat Microservice"
authors = ["Daniel Schranz"]
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
fastapi = { extras = ["standard"], version = "^0.115.0" }
sqlmodel = "^0.0.21"
psycopg = { extras = ["binary"], version = "^3.2.1" }
greenlet = "^3.0"
alembic = "^1.13.2"
pydantic-settings = "^2.3.4"
openai = "^1.42.0"
pyjwt = "^2.9.0"
sentry-sdk = { extras = ["fastapi"], version = "^2.16.0" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.25.3"
httpx = "^0.27"
aiosqlite = "^0.20"
black = "^24.0"
ruff = "^0.5"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
  "unit: no external deps",
  "integration: requires database",
]
